--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,11 +1,50 @@
 
+.products-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 48px;
+}
+
+.product-card-details {
+    max-width: 36rem;
+}
+
+.product-card, .product-card-details {
+    box-shadow: 0px 10px 9px 3px #d0d0d0;
+}
+
+.product-card:hover {
+    box-shadow: 0px 12px 11px 3px #afafaf;
+    cursor: pointer;
+}
+
+.product-card a {
+    text-decoration: none;
+    color: #212529;
+    height: 100%;
+}
+
 .new-product-container {
-   max-width: 600px;
+    max-width: 600px;
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
+}
+
+@media screen and (max-width:768px){
+    .products-container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 36px;
+    }
+}
+
+@media screen and (max-width:400px){
+    .products-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 48px;
+    }
 }
