--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -5,6 +5,7 @@
     gap: 48px;
 }
 
+  /* products list product card */
 .product-card-details {
     max-width: 36rem;
 }
@@ -18,6 +19,21 @@
     cursor: pointer;
 }
 
+  /* product details card */
+.product-card-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.product-card-container .product-card {
+    max-width: 32rem;
+    min-width: 24rem;
+    cursor: default;
+}
+
+/* add product form */
 .new-product-container {
     max-width: 600px;
 }
